Add Header Component

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,1 +1,30 @@
-<header class="header"></header>
+<header class="header header--main">
+  <div class="container header__container">
+    <a href="#">
+      <img src="@img/logo/logo.svg" alt="Logo CreateX" />
+    </a>
+    <nav class="nav header__nav">
+      <ul class="nav__list">
+        <li class="nav__item"><a href="#" class="nav__link">About Us</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Work</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">News</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Contacts</a></li>
+      </ul>
+    </nav>
+    <div class="header-contacts">
+      <a
+        href="tel:4055550128"
+        class="header-contacts__link contacts-link contacts-link--call">
+        <span class="contacts-link__caption">Call us</span>
+        <span class="contacts-link__value">(405) 555-0128</span>
+      </a>
+      <a
+        href="mailto:hello@createx.com"
+        class="header-contacts__link contacts-link contacts-link--mail">
+        <span class="contacts-link__caption">Talk to us</span>
+        <span class="contacts-link__value">hello@createx.com</span>
+      </a>
+    </div>
+  </div>
+</header>
