Changing the header section style and adding the hero section

--- a/src/html/head.html
+++ b/src/html/head.html
@@ -2,9 +2,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="blue" />
-  <meta name="msapplication-TileColor" content="blue" />
-  <meta name="theme-color" content="blue" />
+  <meta name="author" content="Olexander Khrystychenko" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#FF5A30" />
+  <meta name="msapplication-TileColor" content="#FF5A30" />
+  <meta name="theme-color" content="#FF5A30" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/style.min.css" />
   <title>@@title</title>
 </head>
