--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,9 +1,16 @@
-<header class="header header--main">
+<header class="header">
   <div class="container header__container">
-    <a href="#">
-      <img src="@img/logo/logo.svg" alt="Logo CreateX" />
-    </a>
-    <nav class="nav header__nav">
+    <h1 class="header__title">
+      <a href="index.html" class="header__logo">
+        <img
+          width="130"
+          height="22"
+          src="@img/logo/logo.svg"
+          alt="CreateX Logo" />
+      </a>
+    </h1>
+
+    <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item"><a href="#" class="nav__link">About Us</a></li>
         <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
@@ -12,16 +19,15 @@
         <li class="nav__item"><a href="#" class="nav__link">Contacts</a></li>
       </ul>
     </nav>
-    <div class="header-contacts">
-      <a
-        href="tel:4055550128"
-        class="header-contacts__link contacts-link contacts-link--call">
+
+    <div class="header__contacts">
+      <a href="tel:4055550128" class="contacts-link contacts-link--phone">
         <span class="contacts-link__caption">Call us</span>
         <span class="contacts-link__value">(405) 555-0128</span>
       </a>
       <a
         href="mailto:hello@createx.com"
-        class="header-contacts__link contacts-link contacts-link--mail">
+        class="contacts-link contacts-link--email">
         <span class="contacts-link__caption">Talk to us</span>
         <span class="contacts-link__value">hello@createx.com</span>
       </a>
