--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   @@include('html/head.html', { 'title': 'Createx - Construction' })
   <body>
-    @@include('html/header.html', { })
-    <main></main>
-    @@include('html/footer.html', { })
+    <!-- * Header * -->
+    @@include('html/header.html', {})
+    <!-- * Main * -->
+    <main>
+      <!-- * Hero * -->
+      @@include('html/hero.html', {})
+    </main>
+    <!-- * Footer * -->
+    @@include('html/footer.html', {})
     <script src="js/app.min.js"></script>
   </body>
 </html>
