add video section

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -5,6 +5,7 @@
         <img
           width="130"
           height="22"
+          loading="lazy"
           src="@img/logo/logo.svg"
           alt="CreateX Logo" />
       </a>
