--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <main>
       <!-- * Hero * -->
       @@include('html/hero.html', {})
+      <!-- * Video * -->
+      @@include('html/video.html', {})
     </main>
     <!-- * Footer * -->
     @@include('html/footer.html', {})
