add values section

--- a/src/html/video.html
+++ b/src/html/video.html
@@ -11,7 +11,8 @@
         alt="Video Preolader"
         class="video__preolader"
         width="1230"
-        height="500" />
+        height="500"
+        loading="lazy" />
     </div>
   </div>
 </section>
