--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
       @@include('html/hero.html', {})
       <!-- * Video * -->
       @@include('html/video.html', {})
+      <!-- * Values * -->
+      @@include('html/values.html', {})
     </main>
     <!-- * Footer * -->
     @@include('html/footer.html', {})
