add request section and services

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
       @@include('html/video.html', {})
       <!-- * Values * -->
       @@include('html/values.html', {})
+      <!-- * Request * -->
+      @@include('html/request.html',{})
+      <!-- * Services * -->
+      @@include('html/services.html',{})
     </main>
     <!-- * Footer * -->
     @@include('html/footer.html', {})
