--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -11,8 +11,8 @@
               turpis purus eget pellentesque integer ipsum elementum felis.
             </p>
             <div class="hero__btn-group">
-              <button class="btn btn--transparent">Learn more about us</button>
-              <button class="btn btn--primary">Submit request</button>
+              <a href="#" class="btn btn--transparent">Learn more about us</a>
+              <a href="#" class="btn btn--primary">Submit request</a>
             </div>
           </div>
         </div>
@@ -28,8 +28,8 @@
               turpis purus eget pellentesque integer ipsum elementum felis.
             </p>
             <div class="hero__btn-group">
-              <button class="btn btn--transparent">Learn more about us</button>
-              <button class="btn btn--primary">Submit request</button>
+              <a href="#" class="btn btn--transparent">Learn more about us</a>
+              <a href="#" class="btn btn--primary">Submit request</a>
             </div>
           </div>
         </div>
@@ -45,8 +45,8 @@
               turpis purus eget pellentesque integer ipsum elementum felis.
             </p>
             <div class="hero__btn-group">
-              <button class="btn btn--transparent">Learn more about us</button>
-              <button class="btn btn--primary">Submit request</button>
+              <a href="#" class="btn btn--transparent">Learn more about us</a>
+              <a href="#" class="btn btn--primary">Submit request</a>
             </div>
           </div>
         </div>
@@ -62,8 +62,8 @@
               turpis purus eget pellentesque integer ipsum elementum felis.
             </p>
             <div class="hero__btn-group">
-              <button class="btn btn--transparent">Learn more about us</button>
-              <button class="btn">Submit request</button>
+              <a href="#" class="btn btn--transparent">Learn more about us</a>
+              <a href="#" class="btn">Submit request</a>
             </div>
           </div>
         </div>
