--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
       @@include('html/request.html',{})
       <!-- * Services * -->
       @@include('html/services.html',{})
+      <!-- * Portfolio slider * -->
+      @@include('html/portfolio-slider.html',{})
     </main>
     <!-- * Footer * -->
     @@include('html/footer.html', {})
