add section partners and section testimonials

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,12 @@
       @@include('html/services.html',{})
       <!-- * Portfolio slider * -->
       @@include('html/portfolio-slider.html',{})
+      <div class="wrapper wrapper--gray">
+        <!-- * Partners * -->
+        @@include('html/partners.html',{})
+        <!-- * Testimonials * -->
+        @@include('html/testimonials.html',{})
+      </div>
     </main>
     <!-- * Footer * -->
     @@include('html/footer.html', {})
