added three section
added three section: facts, recent-news and discuss

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,14 @@
         <!-- * Testimonials * -->
         @@include('html/testimonials.html',{})
       </div>
+      <div class="wrapper wrapper--main-bg">
+        <!-- * Facts * -->
+        @@include('html/facts.html',{})
+        <!-- * Recent News * -->
+        @@include('html/recent-news.html',{})
+      </div>
+      <!-- * Discuss * -->
+      @@include('html/discuss.html',{})
     </main>
     <!-- * Footer * -->
     @@include('html/footer.html', {})
