response home page

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -192,7 +192,7 @@
         </svg>
         by Createx Studio
       </p>
-      <a href="#" class="footer__top">
+      <a href="#hero" class="footer__top">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
