--- a/src/html/header.html
+++ b/src/html/header.html
@@ -33,5 +33,9 @@
         <span class="contacts-link__value">hello@createx.com</span>
       </a>
     </div>
+
+    <div class="burger">
+      <span class="burger__line"></span>
+    </div>
   </div>
 </header>
