--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
   <div class="swiper hero__slider">
     <div class="swiper-wrapper hero__wrapper">
       <div class="swiper-slide hero__item">
