adding new page Services and hero section in  services page

--- a/src/html/services.html
+++ b/src/html/services.html
@@ -121,7 +121,7 @@
     </div>
     <div class="learn-more">
       <h3 class="learn-more__title">Learn more about our services</h3>
-      <a href="#" class="btn">View services</a>
+      <a href="services.html" class="btn">View services</a>
     </div>
   </div>
 </section>
