--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -163,7 +163,7 @@
         <h2 class="footer__nav-title">OUR EXPERIENCE</h2>
         <ul class="footer__nav-list">
           <li class="footer__nav-item">
-            <a href="#" class="footer__nav-link">Services</a>
+            <a href="services.html" class="footer__nav-link">Services</a>
           </li>
           <li class="footer__nav-item">
             <a href="#" class="footer__nav-link">Work</a>
