--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header @@transparent">
   <div class="container header__container">
     <h1 class="header__title">
       <a href="index.html" class="header__logo">
@@ -13,11 +13,23 @@
 
     <nav class="nav">
       <ul class="nav__list">
-        <li class="nav__item"><a href="#" class="nav__link">About Us</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Work</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">News</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">Contacts</a></li>
+        <li class="nav__item">
+          <a href="#" class="nav__link @@aboutCurrent">About Us</a>
+        </li>
+        <li class="nav__item">
+          <a href="services.html" class="nav__link @@servicesCurrent"
+            >Services</a
+          >
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link @@workCurrent">Work</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link @@newsCurrent">News</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link @@contactsCurrent">Contacts</a>
+        </li>
       </ul>
     </nav>
 
