finished the page Services

--- a/src/services.html
+++ b/src/services.html
@@ -16,7 +16,7 @@
               / <span>Services</span>
             </div>
             <h2 class="hero__title hero__title--black">SERVICES</h2>
-            <p class="hero__txt hero__txt--gray">
+            <p class="hero__txt hero__txt--gray hero__txt--black">
               If you are looking for a full-service construction company, look
               to Createx Construction Bureau. We are doing our best
               to be a partner for all of your construction needs.
@@ -24,6 +24,8 @@
           </div>
         </div>
       </section>
+      <!-- * Services Info * -->
+      @@include('html/services-info.html',{})
       <!-- * Discuss * -->
       @@include('html/discuss.html',{})
     </main>
