added new page - interior design and added new section - offer

--- a/src/html/portfolio-slider.html
+++ b/src/html/portfolio-slider.html
@@ -1,8 +1,6 @@
 <section class="portfolio-slider">
   <div class="container">
-    <h2 class="title">
-      Browse our selected projects and learn more about our work
-    </h2>
+    <h2 class="title">@@title</h2>
 
     <div class="swiper portfolio-slider__slider">
       <div class="swiper-wrapper portfolio-slider__wrapper">
