--- a/src/html/services-info.html
+++ b/src/html/services-info.html
@@ -18,7 +18,9 @@
             gravida posuere massa ac interdum. Eget aliquam dignissim ut
             vestibulum.
           </p>
-          <a class="btn services-info__btn" href="#">Learn more</a>
+          <a class="btn services-info__btn" href="interior-design.html"
+            >Learn more</a
+          >
         </div>
       </div>
 
@@ -37,7 +39,9 @@
             viverra in. Est nulla lectus purus tincidunt massa tortor. Hendrerit
             vulputate elementum blandit massa vitae amet felis eget.
           </p>
-          <a class="btn services-info__btn" href="#">Learn more</a>
+          <a class="btn services-info__btn" href="interior-design.html"
+            >Learn more</a
+          >
         </div>
       </div>
 
@@ -59,7 +63,9 @@
             duis. Arcu dictum metus sed purus senectus faucibus eget elementum
             pretium.
           </p>
-          <a class="btn services-info__btn" href="#">Learn more</a>
+          <a class="btn services-info__btn" href="interior-design.html"
+            >Learn more</a
+          >
         </div>
       </div>
 
@@ -78,7 +84,9 @@
             commodo, tortor gravida pretium, orci. Nunc sit sollicitudin id
             egestas mattis. Turpis viverra nec urna ultrices urna.
           </p>
-          <a class="btn services-info__btn" href="#">Learn more</a>
+          <a class="btn services-info__btn" href="interior-design.html"
+            >Learn more</a
+          >
         </div>
       </div>
     </div>
