--- a/src/html/services.html
+++ b/src/html/services.html
@@ -6,7 +6,7 @@
       construction services.
     </p>
     <div class="services__container">
-      <a href="#" class="services__box">
+      <a href="interior-design.html" class="services__box">
         <div class="services__icon-box">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -35,7 +35,7 @@
         <div class="services__bg"></div>
       </a>
 
-      <a href="#" class="services__box">
+      <a href="interior-design.html" class="services__box">
         <div class="services__icon-box">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -68,7 +68,7 @@
         <div class="services__bg"></div>
       </a>
 
-      <a href="#" class="services__box">
+      <a href="interior-design.html" class="services__box">
         <div class="services__icon-box">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -101,7 +101,7 @@
         <div class="services__bg"></div>
       </a>
 
-      <a href="#" class="services__box">
+      <a href="interior-design.html" class="services__box">
         <div class="services__icon-box">
           <svg
             xmlns="http://www.w3.org/2000/svg"
