--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <!-- * Services * -->
       @@include('html/services.html',{})
       <!-- * Portfolio slider * -->
-      @@include('html/portfolio-slider.html',{})
+      @@include('html/portfolio-slider.html', {'title': 'Related projects'})
       <div class="wrapper wrapper--gray">
         <!-- * Partners * -->
         @@include('html/partners.html',{})
