added steps section

--- a/src/interior-design.html
+++ b/src/interior-design.html
@@ -30,6 +30,8 @@
       </section>
       <!-- * Offer * -->
       @@include('html/offer.html',{})
+      <!-- * Steps * -->
+      @@include('html/steps.html',{})
       <!-- * Portfolio slider * -->
       @@include('html/portfolio-slider.html', {'title': 'Related projects'})
       <!-- * Partners * -->
