--- a/src/html/offer.html
+++ b/src/html/offer.html
@@ -5,7 +5,7 @@
       <div class="offer__content">
         <h2 class="title">We Offer</h2>
         <div class="accordion">
-          <div class="accordion__content accordion__content--open">
+          <div class="accordion__content">
             <div class="accordion__header">
               <div class="accordion__icon"></div>
               <h3 class="accordion__title">Interior design of apartments</h3>
