added benefits and prising sections. Finished page

--- a/src/html/portfolio-slider.html
+++ b/src/html/portfolio-slider.html
@@ -13,7 +13,9 @@
           <div class="portfolio-slider__body">
             <h3 class="portfolio-slider__title">Red Finger Building</h3>
             <p class="portfolio-slider__subtitle">Business Centers</p>
-            <a href="#" class="btn btn--transparent portfolio-slider__btn"
+            <a
+              href="modern-cotage.html"
+              class="btn btn--transparent portfolio-slider__btn"
               >View Project</a
             >
           </div>
@@ -28,7 +30,9 @@
           <div class="portfolio-slider__body">
             <h3 class="portfolio-slider__title">Cubes Building</h3>
             <p class="portfolio-slider__subtitle">Business Centers</p>
-            <a href="#" class="btn btn--transparent portfolio-slider__btn"
+            <a
+              href="modern-cotage.html"
+              class="btn btn--transparent portfolio-slider__btn"
               >View Project</a
             >
           </div>
@@ -43,7 +47,9 @@
           <div class="portfolio-slider__body">
             <h3 class="portfolio-slider__title">The Pencil Building</h3>
             <p class="portfolio-slider__subtitle">Stores & Malls</p>
-            <a href="#" class="btn btn--transparent portfolio-slider__btn"
+            <a
+              href="modern-cotage.html"
+              class="btn btn--transparent portfolio-slider__btn"
               >View Project</a
             >
           </div>
@@ -58,7 +64,9 @@
           <div class="portfolio-slider__body">
             <h3 class="portfolio-slider__title">Red Finger Building</h3>
             <p class="portfolio-slider__subtitle">Business Centers</p>
-            <a href="#" class="btn btn--transparent portfolio-slider__btn"
+            <a
+              href="modern-cotage.html"
+              class="btn btn--transparent portfolio-slider__btn"
               >View Project</a
             >
           </div>
@@ -73,7 +81,9 @@
           <div class="portfolio-slider__body">
             <h3 class="portfolio-slider__title">Cubes Building</h3>
             <p class="portfolio-slider__subtitle">Business Centers</p>
-            <a href="#" class="btn btn--transparent portfolio-slider__btn"
+            <a
+              href="modern-cotage.html"
+              class="btn btn--transparent portfolio-slider__btn"
               >View Project</a
             >
           </div>
@@ -88,7 +98,9 @@
           <div class="portfolio-slider__body">
             <h3 class="portfolio-slider__title">The Pencil Building</h3>
             <p class="portfolio-slider__subtitle">Stores & Malls</p>
-            <a href="#" class="btn btn--transparent portfolio-slider__btn"
+            <a
+              href="modern-cotage.html"
+              class="btn btn--transparent portfolio-slider__btn"
               >View Project</a
             >
           </div>
@@ -101,7 +113,7 @@
 
     <div class="learn-more portfolio-slider__more">
       <h3 class="learn-more__title">Explore all our works</h3>
-      <a href="#" class="btn">View portfolio</a>
+      <a href="portfolio.html" class="btn">View portfolio</a>
     </div>
   </div>
 </section>
