--- a/src/interior-design.html
+++ b/src/interior-design.html
@@ -32,10 +32,16 @@
       @@include('html/offer.html',{})
       <!-- * Steps * -->
       @@include('html/steps.html',{})
+      <!-- * Benefits * -->
+      @@include('html/benefits.html',{})
       <!-- * Portfolio slider * -->
       @@include('html/portfolio-slider.html', {'title': 'Related projects'})
-      <!-- * Partners * -->
-      @@include('html/partners.html',{})
+      <div class="interior-design__wrapper">
+        <!-- * Pricing * -->
+        @@include('html/pricing.html',{})
+        <!-- * Partners * -->
+        @@include('html/partners.html',{})
+      </div>
       <!-- * Discuss * -->
       @@include('html/discuss.html',{})
     </main>
