--- a/src/html/discuss.html
+++ b/src/html/discuss.html
@@ -1,4 +1,4 @@
-<section class="discuss">
+<section class="discuss" id="discuss">
   <div class="container discuss__container">
     <div class="discuss__content">
       <h2 class="title title--center discuss__title">
