finished portfolio page

--- a/src/html/benefits.html
+++ b/src/html/benefits.html
@@ -9,7 +9,8 @@
         <img
           src="@img/icons/benefits-icon1.svg"
           alt="Fixed Terms & Cost"
-          class="benefits__icon" />
+          class="benefits__icon"
+          loading="lazy" />
         <h3 class="benefits__title">Fixed Terms & Cost</h3>
         <p class="benefits__txt">
           Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit
@@ -23,7 +24,8 @@
         <img
           src="@img/icons/benefits-icon2.svg"
           alt="Fixed Terms & Cost"
-          class="benefits__icon" />
+          class="benefits__icon"
+          loading="lazy" />
         <h3 class="benefits__title">Qualified Workers</h3>
         <p class="benefits__txt">
           Anim reprehenderit sint voluptate exercitation adipisicing laborum
@@ -37,7 +39,8 @@
         <img
           src="@img/icons/benefits-icon3.svg"
           alt="Fixed Terms & Cost"
-          class="benefits__icon" />
+          class="benefits__icon"
+          loading="lazy" />
         <h3 class="benefits__title">Supervision & Control</h3>
         <p class="benefits__txt">
           Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit
