--- a/src/interior-design.html
+++ b/src/interior-design.html
@@ -43,7 +43,7 @@
         @@include('html/partners.html',{})
       </div>
       <!-- * Discuss * -->
-      @@include('html/discuss.html',{})
+      @@include('html/discuss.html',{'top': 'mt-0'})
     </main>
     <!-- * Footer * -->
     @@include('html/footer.html', {})
