--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -166,7 +166,7 @@
             <a href="services.html" class="footer__nav-link">Services</a>
           </li>
           <li class="footer__nav-item">
-            <a href="#" class="footer__nav-link">Work</a>
+            <a href="portfolio.html" class="footer__nav-link">Work</a>
           </li>
           <li class="footer__nav-item">
             <a href="#" class="footer__nav-link">News</a>
