--- a/src/html/header.html
+++ b/src/html/header.html
@@ -22,7 +22,7 @@
           >
         </li>
         <li class="nav__item">
-          <a href="#" class="nav__link @@workCurrent">Work</a>
+          <a href="portfolio.html" class="nav__link @@workCurrent">Work</a>
         </li>
         <li class="nav__item">
           <a href="#" class="nav__link @@newsCurrent">News</a>
