--- a/src/html/offer.html
+++ b/src/html/offer.html
@@ -1,7 +1,11 @@
 <section class="offer">
   <div class="container">
     <div class="offer__container">
-      <img src="@img/offer-img.jpg" alt="We offer" class="offer__img" />
+      <img
+        src="@img/offer-img.jpg"
+        alt="We offer"
+        class="offer__img"
+        loading="lazy" />
       <div class="offer__content">
         <h2 class="title">We Offer</h2>
         <div class="accordion">
