--- a/src/html/header.html
+++ b/src/html/header.html
@@ -14,7 +14,7 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="#" class="nav__link @@aboutCurrent">About Us</a>
+          <a href="about.html" class="nav__link @@aboutCurrent">About Us</a>
         </li>
         <li class="nav__item">
           <a href="services.html" class="nav__link @@servicesCurrent"
