added map section and fix other sections

--- a/src/about.html
+++ b/src/about.html
@@ -33,6 +33,8 @@
       </div>
       <!-- * Partners * -->
       @@include('html/partners.html',{})
+      <!-- * Map * -->
+      @@include('html/map.html',{})
       <!-- * Discuss * -->
       @@include('html/discuss.html',{})
     </main>
