added section ceo

--- a/src/about.html
+++ b/src/about.html
@@ -27,6 +27,8 @@
       </section>
       <!-- * Statistics * -->
       @@include('html/statistics.html', {})
+      <!-- * Ceo * -->
+      @@include('html/ceo.html',{})
       <div class="wrapper wrapper--gray">
         <!-- * Values * -->
         @@include('html/values.html', {})
