--- a/src/html/map.html
+++ b/src/html/map.html
@@ -1,6 +1,6 @@
 <section class="map">
   <div class="container">
     <h2 class="title title--center">We work worldwide</h2>
-    <img src="@img/map.svg" alt="Map" class="map__img" />
+    <img src="@img/map.svg" alt="Map" loading="lazy" class="map__img" />
   </div>
 </section>
