added team section

--- a/src/about.html
+++ b/src/about.html
@@ -35,6 +35,8 @@
       </div>
       <!-- * Partners * -->
       @@include('html/partners.html',{})
+      <!-- * team * -->
+      @@include('html/team.html',{})
       <!-- * Map * -->
       @@include('html/map.html',{})
       <!-- * Discuss * -->
