--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -11,8 +11,10 @@
               turpis purus eget pellentesque integer ipsum elementum felis.
             </p>
             <div class="hero__btn-group">
-              <a href="#" class="btn btn--transparent">Learn more about us</a>
-              <a href="#" class="btn btn--primary">Submit request</a>
+              <a href="about.html" class="btn btn--transparent"
+                >Learn more about us</a
+              >
+              <a href="#discuss" class="btn btn--primary">Submit request</a>
             </div>
           </div>
         </div>
