--- a/src/html/discuss.html
+++ b/src/html/discuss.html
@@ -1,6 +1,6 @@
-<section class="discuss @@top" id="discuss">
+<section class="discuss @@top">
   <div class="container discuss__container">
-    <div class="discuss__content">
+    <div class="discuss__content" id="discuss">
       <h2 class="title title--center discuss__title">
         A quick way to discuss details
       </h2>
