--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -148,10 +148,12 @@
         <h2 class="footer__nav-title">WHO WE ARE</h2>
         <ul class="footer__nav-list">
           <li class="footer__nav-item">
-            <a href="#" class="footer__nav-link">About Us</a>
+            <a href="about.html" class="footer__nav-link">About Us</a>
           </li>
           <li class="footer__nav-item">
-            <a href="#" class="footer__nav-link">Available Positions</a>
+            <a href="positions.html" class="footer__nav-link"
+              >Available Positions</a
+            >
           </li>
           <li class="footer__nav-item">
             <a href="#" class="footer__nav-link">Contacts</a>
