added history section and finished about page

--- a/src/about.html
+++ b/src/about.html
@@ -32,6 +32,8 @@
       <div class="wrapper wrapper--gray">
         <!-- * Values * -->
         @@include('html/values.html', {})
+        <!-- * History * -->
+        @@include('html/history.html', {})
       </div>
       <!-- * Partners * -->
       @@include('html/partners.html',{})
