finished news page

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -25,7 +25,7 @@
           <a href="portfolio.html" class="nav__link @@workCurrent">Work</a>
         </li>
         <li class="nav__item">
-          <a href="#" class="nav__link @@newsCurrent">News</a>
+          <a href="news.html" class="nav__link @@newsCurrent">News</a>
         </li>
         <li class="nav__item">
           <a href="#" class="nav__link @@contactsCurrent">Contacts</a>
