--- a/src/html/recent-news.html
+++ b/src/html/recent-news.html
@@ -10,7 +10,7 @@
           class="recent-news__img" />
         <div class="recent-news__body recent-news__body--main">
           <h3 class="recent-news__title">
-            <a href="#" class="recent-news__title-link"
+            <a href="single-post.html" class="recent-news__title-link"
               >How to Build Climate Change-Resilient Infrastructure</a
             >
           </h3>
@@ -56,7 +56,7 @@
           class="recent-news__img" />
         <div class="recent-news__body">
           <h3 class="recent-news__title">
-            <a href="#" class="recent-news__title-link"
+            <a href="single-post.html" class="recent-news__title-link"
               >How Construction Can Help Itself</a
             >
           </h3>
@@ -97,7 +97,7 @@
           class="recent-news__img" />
         <div class="recent-news__body">
           <h3 class="recent-news__title">
-            <a href="#" class="recent-news__title-link"
+            <a href="single-post.html" class="recent-news__title-link"
               >Types of Flooring Materials</a
             >
           </h3>
@@ -133,7 +133,7 @@
 
     <div class="learn-more recent-news__more">
       <h3 class="learn-more__title">Explore all our news posts</h3>
-      <a href="#" class="btn">View all news</a>
+      <a href="news.html" class="btn">View all news</a>
     </div>
   </div>
 </section>
