--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -171,7 +171,7 @@
             <a href="portfolio.html" class="footer__nav-link">Work</a>
           </li>
           <li class="footer__nav-item">
-            <a href="#" class="footer__nav-link">News</a>
+            <a href="news.html" class="footer__nav-link">News</a>
           </li>
         </ul>
       </div>
