finished single-post page

--- a/src/single-post.html
+++ b/src/single-post.html
@@ -8,9 +8,10 @@
     <!-- * Main * -->
     <main>
       <!-- * Hero * -->
-      <section class="hero hero__page hero--about" id="hero">
+      <section class="hero hero__page hero--single-post" id="hero">
         <div class="container">
-          <div class="hero__container hero__container--page">
+          <div
+            class="hero__container hero__container--page hero__container-single">
             <div class="hero__breadcrumbs">
               <a href="index.html" class="hero__breadcrumbs--black">Homepage</a>
               /
@@ -18,14 +19,105 @@
               /
               <span>How to Build Climate Change-Resilient Infrastructure</span>
             </div>
-            <h2 class="hero__title hero__title--black">
+            <h2 class="hero__title hero__title--single hero__title--black">
               How to Build Climate Change-Resilient Infrastructure
             </h2>
+            <div class="hero__meta-box">
+              <div class="hero__meta">
+                <p class="hero__meta-item">Industry News</p>
+                <div class="hero__divider"></div>
+                <p class="hero__meta-item">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20"
+                    fill="none">
+                    <path
+                      d="M10.834 5.41634C10.834 4.9561 10.4609 4.58301 10.0007 4.58301C9.54041 4.58301 9.16732 4.9561 9.16732 5.41634V9.99967C9.16732 10.2207 9.25511 10.4326 9.4114 10.5889L11.9114 13.0889C12.2368 13.4144 12.7645 13.4144 13.0899 13.0889C13.4153 12.7635 13.4153 12.2359 13.0899 11.9104L10.834 9.6545V5.41634Z"
+                      fill="#787A80" />
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M10.0007 0.833008C4.93804 0.833008 0.833984 4.93706 0.833984 9.99967C0.833984 15.0623 4.93804 19.1663 10.0007 19.1663C15.0633 19.1663 19.1673 15.0623 19.1673 9.99967C19.1673 4.93706 15.0633 0.833008 10.0007 0.833008ZM2.50065 9.99967C2.50065 5.85754 5.85851 2.49967 10.0007 2.49967C14.1428 2.49967 17.5006 5.85754 17.5006 9.99967C17.5006 14.1418 14.1428 17.4997 10.0007 17.4997C5.85851 17.4997 2.50065 14.1418 2.50065 9.99967Z"
+                      fill="#787A80" />
+                  </svg>
+                  June 24, 2020
+                </p>
+                <div class="hero__divider"></div>
+                <p class="hero__meta-item">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20"
+                    fill="none">
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M18.2692 8.80648C18.1505 9.62875 17.8692 10.4103 17.4524 11.129C17.4836 11.3069 17.4996 11.4867 17.4996 11.6674C17.4996 12.2947 17.3179 12.8951 16.9811 13.4406C16.8131 13.7129 16.7698 14.032 16.7532 14.2428C16.7341 14.4844 16.7405 14.7487 16.7578 15.0026C16.7771 15.2875 16.8121 15.5866 16.8522 15.8688C16.527 15.774 16.1744 15.6787 15.838 15.6028C15.5581 15.5397 15.2718 15.4859 15.0124 15.4591C14.7862 15.4357 14.4593 15.4176 14.1669 15.5121C13.5277 15.7188 12.8243 15.834 12.0829 15.834C11.2014 15.834 10.3917 15.6775 9.68199 15.4057C9.51128 15.4135 9.33933 15.4174 9.16626 15.4174C8.16242 15.4174 7.19626 15.2854 6.29232 15.0414C7.60645 16.5613 9.77285 17.5007 12.0829 17.5007C12.9854 17.5007 13.8516 17.3622 14.6498 17.1075C14.6512 17.1076 14.6537 17.1075 14.6575 17.1075C14.678 17.1071 14.7349 17.1059 14.8412 17.1169C15.0084 17.1342 15.2233 17.1727 15.4712 17.2286C15.9649 17.34 16.5196 17.5043 16.9519 17.6415C17.8687 17.9325 18.757 17.1325 18.5931 16.2022C18.5226 15.8018 18.4494 15.3131 18.4206 14.8897C18.4061 14.6768 18.4046 14.5021 18.4147 14.3739C18.4189 14.3208 18.4242 14.2875 18.4276 14.2697C18.8965 13.4931 19.1663 12.6088 19.1663 11.6674C19.1663 10.6061 18.8367 9.63695 18.2692 8.80648Z"
+                      fill="#787A80" />
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M4.66386 4.7488C3.54057 5.60779 2.91633 6.7354 2.91633 7.91699C2.91633 8.50619 3.06971 9.07366 3.35748 9.60135C3.46709 9.80234 3.49818 10.0097 3.5093 10.15C3.52142 10.3031 3.51538 10.4603 3.50207 10.6074C3.47542 10.9019 3.41186 11.2356 3.33562 11.5642C3.24643 11.9486 3.13216 12.3586 3.0162 12.7435C3.4564 12.5835 3.93754 12.4195 4.39367 12.2865C4.76231 12.1789 5.13459 12.0856 5.46592 12.0332C5.75135 11.9881 6.16553 11.9437 6.52213 12.0671C7.3224 12.3439 8.21764 12.5003 9.16633 12.5003C10.9556 12.5003 12.5447 11.9448 13.6688 11.0852C14.7921 10.2262 15.4163 9.09859 15.4163 7.91699C15.4163 6.7354 14.7921 5.60779 13.6688 4.7488C12.5447 3.88922 10.9556 3.33366 9.16633 3.33366C7.37702 3.33366 5.78793 3.88922 4.66386 4.7488ZM3.65145 3.42487C5.09104 2.324 7.04362 1.66699 9.16633 1.66699C11.289 1.66699 13.2416 2.324 14.6812 3.42487C16.1216 4.52632 17.083 6.10704 17.083 7.91699C17.083 9.72694 16.1216 11.3077 14.6812 12.4091C13.2416 13.51 11.289 14.167 9.16633 14.167C8.04711 14.167 6.97805 13.9845 6.00739 13.6525C6.00641 13.6552 5.92769 13.6476 5.72623 13.6794C5.49402 13.7161 5.19761 13.7881 4.86045 13.8864C4.18922 14.0822 3.43543 14.3593 2.86128 14.5827C1.86659 14.9698 0.853291 14.0145 1.18842 12.9969C1.36605 12.4576 1.57554 11.776 1.71207 11.1875C1.78085 10.8911 1.82548 10.6418 1.84218 10.4572C1.84798 10.3932 1.84948 10.3465 1.84915 10.3149C1.46558 9.58191 1.24966 8.77136 1.24966 7.91699C1.24966 6.10704 2.21108 4.52632 3.65145 3.42487Z"
+                      fill="#787A80" />
+                  </svg>
+                  4 comments
+                </p>
+              </div>
+              <div class="hero__social-list">
+                <a href="#" class="hero__social-link">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none">
+                    <path
+                      d="M17.5628 1.00458L14.7856 1C11.6654 1 9.64903 3.12509 9.64903 6.41423V8.91055H6.85662C6.61532 8.91055 6.41992 9.1115 6.41992 9.35937V12.9763C6.41992 13.2241 6.61554 13.4249 6.85662 13.4249H9.64903V22.5514C9.64903 22.7993 9.84443 23 10.0857 23H13.729C13.9703 23 14.1657 22.799 14.1657 22.5514V13.4249H17.4307C17.672 13.4249 17.8674 13.2241 17.8674 12.9763L17.8688 9.35937C17.8688 9.24036 17.8226 9.12638 17.7409 9.04215C17.6591 8.95793 17.5477 8.91055 17.4318 8.91055H14.1657V6.79439C14.1657 5.77728 14.4017 5.26094 15.6915 5.26094L17.5624 5.26025C17.8035 5.26025 17.9989 5.0593 17.9989 4.81166V1.45317C17.9989 1.20576 17.8037 1.00504 17.5628 1.00458Z"
+                      fill="#787A80" />
+                  </svg>
+                </a>
+                <a href="#" class="hero__social-link">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none">
+                    <path
+                      d="M21.995 22L22 21.9992V14.6642C22 11.0758 21.2275 8.31167 17.0325 8.31167C15.0158 8.31167 13.6625 9.41833 13.11 10.4675H13.0517V8.64667H9.07416V21.9992H13.2158V15.3875C13.2158 13.6467 13.5458 11.9633 15.7017 11.9633C17.8258 11.9633 17.8575 13.95 17.8575 15.4992V22H21.995Z"
+                      fill="#787A80" />
+                    <path
+                      d="M2.32999 8.6475H6.47666V22H2.32999V8.6475Z"
+                      fill="#787A80" />
+                    <path
+                      d="M4.40167 2C3.07583 2 2 3.07583 2 4.40167C2 5.7275 3.07583 6.82583 4.40167 6.82583C5.7275 6.82583 6.80333 5.7275 6.80333 4.40167C6.8025 3.07583 5.72667 2 4.40167 2Z"
+                      fill="#787A80" />
+                  </svg>
+                </a>
+                <a href="#" class="hero__social-link">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none">
+                    <path
+                      d="M22.5 5.77233C21.7271 6.10027 20.8978 6.32267 20.0264 6.42196C20.9161 5.91181 21.5972 5.10263 21.92 4.1414C21.0854 4.61383 20.1642 4.95688 19.1826 5.14285C18.3966 4.33994 17.2785 3.83984 16.0384 3.83984C13.6593 3.83984 11.7303 5.68691 11.7303 7.9637C11.7303 8.2866 11.7683 8.60199 11.8418 8.90357C8.26201 8.73141 5.08768 7.08917 2.96314 4.59372C2.59176 5.20189 2.38049 5.91053 2.38049 6.66697C2.38049 8.09814 3.14161 9.36093 4.2964 10.0997C3.5904 10.0771 2.92639 9.89116 2.34508 9.58205V9.63357C2.34508 11.6314 3.83056 13.2988 5.80024 13.6783C5.43936 13.7713 5.05882 13.8228 4.66514 13.8228C4.38696 13.8228 4.11794 13.7964 3.85417 13.7461C4.40267 15.3859 5.99315 16.5783 7.87756 16.611C6.40388 17.7167 4.54573 18.3739 2.52749 18.3739C2.17976 18.3739 1.83724 18.3537 1.5 18.3173C3.40671 19.4896 5.67036 20.1732 8.10327 20.1732C16.028 20.1732 20.3597 13.8881 20.3597 8.43741L20.3453 7.90341C21.1917 7.32537 21.9239 6.59912 22.5 5.77233Z"
+                      fill="#787A80" />
+                  </svg>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
+      <!-- * Post * -->
+      @@include('html/post.html',{})
       <!-- * Discuss * -->
-      @@include('html/discuss.html',{})
+      @@include('html/discuss.html',{top: 'mt--100'})
     </main>
     <!-- * Footer * -->
     @@include('html/footer.html', {})
