--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -156,7 +156,7 @@
             >
           </li>
           <li class="footer__nav-item">
-            <a href="#" class="footer__nav-link">Contacts</a>
+            <a href="contacts.html" class="footer__nav-link">Contacts</a>
           </li>
         </ul>
       </div>
