--- a/src/html/header.html
+++ b/src/html/header.html
@@ -28,7 +28,9 @@
           <a href="news.html" class="nav__link @@newsCurrent">News</a>
         </li>
         <li class="nav__item">
-          <a href="#" class="nav__link @@contactsCurrent">Contacts</a>
+          <a href="contacts.html" class="nav__link @@contactsCurrent"
+            >Contacts</a
+          >
         </li>
       </ul>
     </nav>
